--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/chuleton-plancha-pimienta-ajo_79782-2241.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
@@ -215,7 +215,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Isabella R 2019. Todos los derechos reservados.</p>
     </footer>
 
 
