modificacion en Acerca de Mi

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <h2>Isabella R</h2>
+          <h1>Isabella R</h1>
         </a>
         <button
           class="navbar-toggler"
@@ -85,9 +85,8 @@
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        Soy una persona proactiva con buena planificacion de menús, con conocimiento en cocina internacional
+        y con tecnicas basicas de panadería y repostería 
       </p>
 
       <div class="row">
@@ -95,31 +94,20 @@
           <i class="fas fa-camera fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Me gusta mucho fotografiar frutas y verduras de estación, sobre todo si son poco usuales de huertas orgánicas de productores locales.
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="fas fa-bullhorn fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Crítica culinaria</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
+           Toda la comida me encanta, pero sin duda alguna me voy mas por la comida gourmet 
         </div>
         <div class="col-12 col-md-4">
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
+            Me encanta compartir mis viajes, y tips a otras personas para que sepan que hacer cunado viajan y tengan una guia de como hacerlo
         </div>
       </div>
     </section>
