errores de ortografía

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Me encanta compartir mis viajes, y tips a otras personas para que sepan que hacer cunado viajan y tengan una guia de como hacerlo
+            Me encanta compartir mis viajes, y tips a otras personas para que sepan que hacer cuando viajan y tengan una guia de como hacerlo
         </div>
       </div>
     </section>
